--- a/04-random-intercepts.Rmd
+++ b/04-random-intercepts.Rmd
@@ -31,13 +31,13 @@ d <- morph
 
 The first rule of any data analysis is to plot the data. It's a common saying that this is also the second and third rule of data analysis. Never underestimate the value of plotting the data creatively. Occasionally, we fit statistical models in between plotting the data.
 
-We are going to look at predicting the length of birds' beaks based on their measured wing length. And we have measurements for a variety of species. 
+We are going to look at predicting the height of birds' beaks based on their measured wing length. And we have measurements for a variety of species. 
 
 ```{r}
 ggplot(d, aes(wingl, beakh, colour = taxon)) + geom_point()
 ```
 
-We could fit a model to these data as they are plotted here. But we might want to consider transforming our predict our variable (wing length) and/or our response variable (beak length). What might that transformation be, and why would we want to do that? 
+We could fit a model to these data as they are plotted here. But we might want to consider transforming our predictor variable (wing length) and/or our response variable (beak height). What might that transformation be, and why would we want to do that? 
 
 Let's plot our data with that transformation:
 
@@ -47,18 +47,18 @@ ggplot(d, aes(
   geom_point()
 ```
 
-One option would be to fit a single linear regression to these data. We can do that right from within ggplot2. Let's look at what that would look like:
+One option would be to fit a single linear regression to these data. We can quickly do that from within ggplot2. Let's look at what that would look like:
 
 ```{r}
 ggplot(d, aes(log(wingl), log(beakh))) +
   geom_point(aes(colour = taxon)) +
-  geom_smooth(method = "lm")
+  geom_smooth(method = "lm") # method = [l]inear [m]odel
 ```
 
 Notice that I moved `aes(colour = taxon)` within the function `geom_point`. What would happen if I hadn't done that? That illustrates another way we could model these data. 
 
 ```{r}
-ggplot(d, aes(log(wingl), log(beakh),colour = taxon)) +
+ggplot(d, aes(log(wingl), log(beakh), colour = taxon)) +
   geom_point() +
   geom_smooth(method = "lm", se = FALSE)
 ```
@@ -81,19 +81,21 @@ m_lm <- lm(log(beakh) ~ log(wingl), data = d)
 
 But we are going to fit a mixed effects model where we let each taxon have its own intercept. And we will constrain those different intercepts by a normal distribution so that information is partially shared across taxa.
 
-The workhorse function of the lme4 package for fitting mixed effects models is the function `lmer`. You can pronounce it however you like. Some people would say "lemur". The syntax is just like `lm` with the addition of a formula for the "random effects".
+This is often referred to as a "random intercept" model.
 
-Let's fit a random intercept model now:
+The workhorse function of the lme4 package for fitting mixed effects models is the function `lmer`. You can pronounce it however you like. Some people would say "lemur", others "ell-m-e-4". The syntax is just like `lm` with the addition of a formula for the "random effects".
+
+You can find extensive details in the documentation `?lme4::lmer`.
 
 ```{r}
 m_lmer <-  lmer(log(beakh) ~ log(wingl) + (1 | taxon), data = d)
 ```
 
-Notice the new piece `+ (1 | taxon)`. The `1` it refers to "intercept" and the `| taxon` tells the function that you want to let the intercept very by the values in the `taxon` column.
+Notice the new piece `+ (1 | taxon)`. The `1` refers to "intercept" and the `| taxon` tells the function that you want to let the intercept vary by the values in the `taxon` column.
 
 # Plotting the predictions
 
-Let's look at what we just did. We'll start by plotting the predictions. To do that, will use the `predict` function. Because we are applying it an object of class `merMod` (meaning it was created by the `lmer` function), we can get details on that function at `?predict.merMod`.
+Let's look at what we just did. We'll start by plotting the predictions. To do that, we'll use the `predict` function. Because we are applying it an object of class `merMod` (meaning it was created by the `lmer` function), we can get details on that function at `?predict.merMod`.
 
 ```{r}
 d$predict_lmer <- predict(m_lmer)
@@ -130,10 +132,15 @@ We can extract the random intercepts with the function `ranef`. Let's do that no
 
 ```{r}
 ranef(m_lmer)
-ranef(m_lmer)$taxon[, 1]
 ```
 
-Let's try plotting them. 
+Look at the structure of `ranef(m_lmer)`. How might you extract those values?
+
+```{r}
+ranef(m_lmer)$taxon[, 1] # exercise
+```
+
+Let's try plotting them. We'll use a little dplyr magic to make a nice data frame.
 
 ```{r}
  # row.names(.) means the row names of the data frame:
@@ -147,6 +154,8 @@ What is the mean of these random intercepts?
 ```{r}
 mean(ranef(m_lmer)$taxon[, 1])
 ```
+
+Is that what you expected? Why or why not?
 
 And what are the estimates of the main effects?
 
@@ -203,11 +212,13 @@ Correlation of Fixed Effects:
 log(wingl) -0.951
 ```
 
-This tells us that our intercept and slope are highly correlated. This isn't a great, and if this correlation is very strong and our model is complicated it might result in computational problems. Later we will talk about ways of solving this (hint: we'll "center" the predictor by subtracting the mean). 
+This tells us that our intercept and slope are highly correlated. Why is this?
 
-There are a lot of details in the output from `summary.merMod` and usually a lot more decimal points than are necessary. 
+This isn't a great, and if this correlation is very strong and our model is complicated it might result in computational problems. Later we will talk about ways of solving this (hint: we'll "center" the predictor by subtracting the mean). 
 
-A nice alternative is the function `arm::display` which focuses on the important pieces. 
+There are a lot of details in the output from `summary.merMod` and usually a lot more decimal places than are reasonable. 
+
+A useful alternative is the function `arm::display` which focuses on the important pieces. 
 
 ```{r}
 arm::display(m_lmer)
@@ -219,7 +230,7 @@ We will tend to use this function throughout the workshop. I tend not to load th
 
 What do the model predictions mean?
 
-For the population level estimate (`fixef(m_lmer)`), our slope is:
+We have assumed that the relationship between log(wing length) and log(beak height) is constant across taxa. Therefore, the single slope value is:
 
 ```{r}
 (slope <- fixef(m_lmer)[[2]] %>% round(1))
@@ -229,7 +240,9 @@ Remember that we are modelling a log(predictor) and a log(response). So we are a
 
 Here, our slope indicates that a 1% change in wing length corresponds to a `r slope`% change in beak length.
 
-What does our intercept mean? Will in this case, it's not very meaningful. It's the expected log(beak length) when log(wing length) = 0. In other words, we would expect a bird with a wing length of 1 to have a beak length of `r round(exp(fixef(m_lmer)[[1]]), 2)`.
+What does our intercept mean?
+
+In this case, it's not very meaningful. It's the expected log(beak length) when log(wing length) = 0. In other words, we would expect a bird with a wing length of 1 to have a beak length of `r round(exp(fixef(m_lmer)[[1]]), 2)`.
 
 How might we make the intercept more meaningful if we were to refit this model?
 
@@ -241,8 +254,8 @@ It's important to know what our models are ignoring and what assumptions we are 
 
 For example: <!-- exercise -->
 
-- we've assumed each taxon is independent but some are obviously more phylogenetically related to each other than others <!-- exercise -->
+- we've assumed each taxon is independent but some are obviously more phylogenetically related to each other --- we could incorporate this information <!-- exercise -->
 - we might want to consider letting the slopes vary as well <!-- exercise -->
 - we've combined all the islands together, and it's possible there is some variation by island <!-- exercise -->
 - some islands are closer to each other than others, so we might want to check for spatial autocorrelation <!-- exercise -->
-- we might want to try centering the predictor
+- we might want to try centering the predictor to reduce correlation between the intercept and slope and make the intercept more interpretable <!-- exercise -->
