--- a/05-random-slopes.Rmd
+++ b/05-random-slopes.Rmd
@@ -4,7 +4,7 @@ Title: Introduction to random intercept and slope models
 
 # Goals
 
-- Extend our understanding of mixed effects models to random slopes
+- Extend our understanding of mixed-effects models to random slopes
 - Start thinking about model checking
 - Learn about group-level predictors. What are they? Why might we use them?
 - Develop an intuition about partial pooling of information/shrinkage
@@ -15,7 +15,7 @@ We're going to start with the same data from the random intercepts exercise and 
 
 Let's read in the data we cleaned up last time. 
 
-```{r}
+```{r, message=FALSE}
 library(tidyverse)
 d <- readRDS("data/generated/morph-geospiza.rds")
 ```
@@ -32,9 +32,9 @@ ggplot(d, aes(log(wingl), log(beakh), colour = taxon)) +
 
 Last time we assumed that the slopes were constant across taxa. The above plot suggests that they might not be. 
 
-Let's modify the mixed effects model we fit last time by allowing the slopes to vary. 
+Let's modify the mixed-effects model we fit last time by allowing the slopes to vary. 
 
-```{r}
+```{r, message=FALSE}
 library(lme4)
 m_int <-  lmer(log(beakh) ~ log(wingl) + (1 | taxon), data = d)
 m_slopes <-  lmer(log(beakh) ~ log(wingl) + (1 + log(wingl) | taxon), data = d)
@@ -92,7 +92,7 @@ One important model diagnostic is plotting the residuals against the fitted valu
 
 We'll add a smoother to help visualize any issues with the residuals. 
 
-```{r, warning=FALSE}
+```{r, warning=FALSE, message=FALSE}
 ggplot(aug_int, aes(.fitted, .resid)) + geom_point() + 
   facet_wrap(~taxon, scales = "free") +
   geom_smooth(se = FALSE)
@@ -100,7 +100,7 @@ ggplot(aug_int, aes(.fitted, .resid)) + geom_point() +
 
 Is there anything concerning with the above plot?
 
-```{r, warning=FALSE}
+```{r, warning=FALSE, message=FALSE}
 ggplot(aug_slopes, aes(.fitted, .resid)) + geom_point() + 
   facet_wrap(~taxon, scales = "free") +
   geom_smooth(se = FALSE)
@@ -108,7 +108,7 @@ ggplot(aug_slopes, aes(.fitted, .resid)) + geom_point() +
 
 This looks a bit better. Why is that? But there are still some problems. The biggest issue, to me, is the curve that we see for *Geospiza forti*:
 
-```{r, warning=FALSE}
+```{r, warning=FALSE, message=FALSE}
 filter(aug_slopes, taxon == "Geospiza fortis") %>%
 ggplot(aes(.fitted, .resid)) + geom_point() + 
   geom_smooth(se = FALSE)
@@ -130,7 +130,8 @@ Ignoring phylogenetic relatedness (some taxa are more related to each other than
 
 Hint 1: "random" intercepts are supposed to be just that: random. There shouldn't be any systematic pattern in their values that we can explain. If there is, we can include that in the model.
 
-Hint 2: What do you think a plot of the intercepts against mean log(wing length) would look like? 
+Hint 2: What do you think a plot of the intercepts against mean log(wing length) would look like?
+
 Before we dig into this, we're going to refit the models with a centered predictor. This just means we will subtract the mean log(wing length) for each taxon. In a later exercise we will dive more into this. For now, just know that this will make the rest of this exercise easier to interpret because our intercept estimates will be at `log(wingl)` = `r round(mean(log(d$wingl)), 1)` instead of `log(wingl)` = 0.
 
 ```{r}
@@ -188,9 +189,9 @@ gridExtra::grid.arrange(p1, p2, ncol = 2)
 
 # Illustrating partial-pooling/shrinkage
 
-One of the major benefits of mixed effects modeling is something we call "shrinkage". The mixed effects model should partially pool information across groups allowing us to make better predictions for groups that we have less information about.
+One of the major benefits of mixed-effects modeling is something we call "shrinkage". The mixed-effects model should partially pool information across groups allowing us to make better predictions for groups that we have less information about.
 
-Here are 2 quick ways we can looked at the partial pooling in our model. We'll compare our predictions from model with random intercepts, random slopes, and a group-level predictor against the prediction from separate linear models group. We'll indicate the sample size by the width of the mixed effects model prediction lines.
+Here are 2 quick ways we can look at the partial pooling in our model. We'll compare our predictions from the model with random intercepts, random slopes, and a group-level predictor (black) against the predictions from separate linear models (coloured). We'll indicate the sample size by the width of the mixed-effects model prediction lines.
 
 ```{r}
 d$predict_slopes2 <- predict(m_slopes2)
