Switch title formats

--- a/02-ggplot.Rmd
+++ b/02-ggplot.Rmd
@@ -1,6 +1,4 @@
----
-Title: An introduction to ggplot2 for rapid data and model visualization
----
+% An introduction to ggplot2 for rapid data and model visualization
 
 # Goals
 
