--- a/05-random-slopes.Rmd
+++ b/05-random-slopes.Rmd
@@ -1,6 +1,4 @@
----
-Title: Introduction to random intercept and slope models
----
+% Introduction to random intercept and slope models
 
 # Goals
 
