--- a/18-grab-bag.Rmd
+++ b/18-grab-bag.Rmd
@@ -3,3 +3,6 @@ title: Grab bag
 ---
 
 Power simulation for GLMMs: <https://rpubs.com/bbolker/11703>
+
+ lmer, p-values and all that
+https://stat.ethz.ch/pipermail/r-help/2006-May/094765.html
